修改聊天页面UI

--- a/dishmap/src/main/res/drawable/chat_right_bg.xml
+++ b/dishmap/src/main/res/drawable/chat_right_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F89471"/>
+    <solid android:color="#F1E4B4"/>
     <corners android:topLeftRadius="50dip"
         android:topRightRadius="0dip"
         android:bottomRightRadius="30dip"
