--- a/dishmap/src/main/res/layout/title_bar_layout.xml
+++ b/dishmap/src/main/res/layout/title_bar_layout.xml
@@ -51,22 +51,12 @@
                     android:layout_centerVertical="true"
                     />
 
-                <ImageView
-                    android:id="@+id/title_bar_persons_iv"
-                    android:layout_width="@dimen/x50"
-                    android:layout_height="@dimen/x44"
-                    android:src="@mipmap/persons_icon"
-                    android:visibility="gone"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/x30"
-                    android:layout_centerVertical="true"
-                    />
 
                 <ImageView
                     android:id="@+id/title_bar_right_iv"
-                    android:layout_width="@dimen/x50"
-                    android:layout_height="@dimen/x44"
-                    android:src="@mipmap/plus_icon"
+                    android:layout_width="@dimen/x46"
+                    android:layout_height="@dimen/x46"
+                    android:src="@mipmap/title_bar_plus_icon"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/x30"
                     android:layout_centerVertical="true"
