--- a/dishmap/src/main/res/drawable/chat_left_bg.xml
+++ b/dishmap/src/main/res/drawable/chat_left_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F4E4E0"/>
+    <solid android:color="#F4F2ED"/>
     <corners android:topLeftRadius="0dip"
         android:topRightRadius="50dip"
         android:bottomRightRadius="50dip"
