--- a/dishmap/src/main/res/layout/activity_scan_success.xml
+++ b/dishmap/src/main/res/layout/activity_scan_success.xml
@@ -31,8 +31,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/x44"
+                android:layout_height="@dimen/x44"
                 android:src="@mipmap/right_icon" />
 
             <TextView
