--- a/dishmap/src/main/res/layout/activity_scan_success.xml
+++ b/dishmap/src/main/res/layout/activity_scan_success.xml
@@ -5,122 +5,126 @@
     android:background="#FBFCFD">
 
 
-
-
-
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/y36"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="@dimen/x512"
-            android:layout_height="@dimen/x512"
-            android:layout_marginTop="@dimen/y70"
-            android:src="@mipmap/big_cycle_icon" />
-
-
+        android:layout_height="match_parent">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/y28"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/y36"
+            android:orientation="vertical">
 
             <ImageView
-                android:layout_width="@dimen/x44"
-                android:layout_height="@dimen/x44"
-                android:src="@mipmap/right_icon" />
+                android:layout_width="@dimen/x512"
+                android:layout_height="@dimen/x512"
+                android:layout_marginTop="@dimen/y70"
+                android:src="@mipmap/big_cycle_icon" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/y28"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/x44"
+                    android:layout_height="@dimen/x44"
+                    android:src="@mipmap/right_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/x20"
+                    android:text="扫码成功"
+                    android:textColor="#D98B8B"
+                    android:textSize="@dimen/big_text_size_2" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/x20"
-                android:text="扫码成功"
-                android:textColor="#D98B8B"
-                android:textSize="@dimen/big_text_size_2" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/y56"
-            android:gravity="center"
-            android:text="欢迎加入\n全聚德美食呼啦圈"
-            android:textColor="#CD6B6E"
-            android:textSize="@dimen/very_big_text_size" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/y62"
-            android:text="请输入"
-            android:textColor="@color/text_dark_gray"
-            android:textSize="@dimen/big_text_size_2" />
-
-
-        <LinearLayout
-            android:id="@+id/activity_scan_success_btm_ll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginTop="@dimen/y36"
-            android:layout_centerHorizontal="true"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="就餐人数"
-                android:textColor="@color/text_dark_gray"
-                android:textSize="@dimen/big_text_size_2" />
-
-            <EditText
-                android:layout_width="@dimen/x177"
-                android:layout_height="@dimen/y62"
-                android:layout_marginLeft="@dimen/x16"
-                android:background="@drawable/white_bg_radius_5_with_stroke"
+                android:layout_marginTop="@dimen/y56"
                 android:gravity="center"
-                android:inputType="number"
-                android:maxLength="3"
-                android:textColor="@color/text_dark_gray"
-                android:textSize="@dimen/big_text_size_2" />
+                android:text="欢迎加入\n全聚德美食呼啦圈"
+                android:textColor="#CD6B6E"
+                android:textSize="@dimen/very_big_text_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/x16"
-                android:text="人"
+                android:layout_marginTop="@dimen/y62"
+                android:text="请输入"
                 android:textColor="@color/text_dark_gray"
                 android:textSize="@dimen/big_text_size_2" />
 
+
+            <LinearLayout
+                android:id="@+id/activity_scan_success_btm_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="@dimen/y36"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="就餐人数"
+                    android:textColor="@color/text_dark_gray"
+                    android:textSize="@dimen/big_text_size_2" />
+
+                <EditText
+                    android:layout_width="@dimen/x177"
+                    android:layout_height="@dimen/y62"
+                    android:layout_marginLeft="@dimen/x16"
+                    android:background="@drawable/white_bg_radius_5_with_stroke"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="3"
+                    android:textColor="@color/text_dark_gray"
+                    android:textSize="@dimen/big_text_size_2" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/x16"
+                    android:text="人"
+                    android:textColor="@color/text_dark_gray"
+                    android:textSize="@dimen/big_text_size_2" />
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="@dimen/x458"
+                android:layout_height="@dimen/y110"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/y70"
+                >
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/radius_btn_bg_shadow" />
+
+                <Button
+                    android:layout_width="@dimen/x438"
+                    android:layout_height="@dimen/y90"
+                    android:layout_centerInParent="true"
+                    android:background="@mipmap/radius_btn_bg"
+                    android:text="确定"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/big_text_size_2" />
+
+            </RelativeLayout>
         </LinearLayout>
+    </ScrollView>
 
-        <RelativeLayout
-            android:layout_width="@dimen/x458"
-            android:layout_height="@dimen/y110"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/y70"
-            >
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@mipmap/radius_btn_bg_shadow" />
 
-            <Button
-                android:layout_width="@dimen/x438"
-                android:layout_height="@dimen/y90"
-                android:layout_centerInParent="true"
-                android:background="@mipmap/radius_btn_bg"
-                android:text="确定"
-                android:textColor="@color/white"
-                android:textSize="@dimen/big_text_size_2" />
 
-        </RelativeLayout>
-    </LinearLayout>
 </RelativeLayout>
