完善优惠券页面

--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -26,5 +26,5 @@
     <color name="text_white_2">#FCFFFF</color>
     <color name="text_red_2">#B90020</color>
     <color name="text_red_3">#89171B</color>
-
+    <color name="orange_color">#F1511F</color>
 </resources>
