--- a/dishmap/src/main/res/layout/fragment_user_mine.xml
+++ b/dishmap/src/main/res/layout/fragment_user_mine.xml
@@ -78,6 +78,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/fragment_user_mine_my_seat_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableTop="@mipmap/mine_seat"
@@ -88,6 +89,7 @@
                 android:textSize="@dimen/normal_text_size" />
 
             <TextView
+                android:id="@+id/fragment_user_mine_coupon_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableTop="@mipmap/mine_coupon"
@@ -100,6 +102,7 @@
 
 
             <TextView
+                android:id="@+id/fragment_user_mine_eated_store_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableTop="@mipmap/mine_house"
@@ -127,6 +130,7 @@
             android:layout_height="@dimen/y111">
 
             <TextView
+                android:id="@+id/fragment_user_mine_feedback_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/normal_text_size"
@@ -139,8 +143,8 @@
                 />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/x13"
+                android:layout_height="@dimen/y23"
                 android:src="@mipmap/detail_right_arrow"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
@@ -159,6 +163,7 @@
             android:layout_height="@dimen/y111">
 
             <TextView
+                android:id="@+id/fragment_user_mine_logout_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/normal_text_size"
@@ -171,8 +176,8 @@
                 />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/x13"
+                android:layout_height="@dimen/y23"
                 android:src="@mipmap/detail_right_arrow"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
