--- a/dishmap/src/main/res/layout/activity_feedback.xml
+++ b/dishmap/src/main/res/layout/activity_feedback.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include
@@ -9,5 +10,64 @@
         layout="@layout/title_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y128"></include>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/x30"
+        android:layout_marginRight="@dimen/x30"
+        android:layout_marginTop="@dimen/y40"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_gray_1"
+            android:textSize="@dimen/big_text_size"
+            android:text="请填写您的意见或建议" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y271"
+            android:layout_marginTop="@dimen/y30"
+            android:gravity="top"
+            android:padding="3dp"
+            android:maxLength="300"
+            android:background="@color/bg_gray"
+            android:textColor="@color/black"
+            android:textSize="@dimen/big_text_size"
+            />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/y30"
+            android:textColor="@color/text_gray_1"
+            android:textSize="@dimen/big_text_size"
+            android:text="请填写您的联系方式" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y90"
+            android:textColor="@color/black"
+            android:padding="3dp"
+            android:maxLength="30"
+            android:singleLine="true"
+            android:textSize="@dimen/big_text_size"
+            android:layout_marginTop="@dimen/y30"
+            android:background="@color/bg_gray"
+            />
+
+
+        <Button
+            android:layout_width="@dimen/x690"
+            android:layout_height="@dimen/y90"
+            android:text="提交"
+            android:layout_marginTop="@dimen/y60"
+            android:textSize="@dimen/very_big_text_size"
+            android:background="@mipmap/submit_btn_bg_for_radius_corner"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
 </LinearLayout>
