修改我的座位页面

--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
     <color name="normal_bg_gray">#F4F0EF</color>
 
     <color name="text_gray_1">#7A7A7A</color>
+    <color name="text_gray_2">#999996</color>
 </resources>
