--- a/dishmap/src/main/res/layout/activity_pay_success.xml
+++ b/dishmap/src/main/res/layout/activity_pay_success.xml
@@ -35,6 +35,7 @@
         android:textColor="@color/white"
         android:layout_marginTop="@dimen/y132"
         android:text="返回"
+        android:textSize="@dimen/big_text_size_2"
         android:background="@mipmap/big_radius_btn_bg"
         />
 
