修改支付页面

--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -31,4 +31,5 @@
 
     <color name="text_gray_1">#7A7A7A</color>
     <color name="text_gray_2">#999996</color>
+    <color name="text_gray_3">#898989</color>
 </resources>
