--- a/dishmap/src/main/res/layout/activity_pay_lv_item.xml
+++ b/dishmap/src/main/res/layout/activity_pay_lv_item.xml
@@ -2,50 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/normal_bg_gray"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="@dimen/x300"
-        android:layout_height="@dimen/y150"
-        android:background="@mipmap/pay_method_red">
+        <RelativeLayout
+            android:layout_width="@dimen/x320"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="@dimen/x300"
+                android:layout_height="@dimen/y150"
+                android:background="@mipmap/pay_method_red">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_centerInParent="true"
-            android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/activity_pay_lv_item_table_people_nums_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="@dimen/big_text_size_2"
-                android:text="1人桌"/>
+                    <TextView
+                        android:id="@+id/activity_pay_lv_item_table_people_nums_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/big_text_size_2"
+                        android:text="1人桌"/>
 
-            <TextView
-                android:id="@+id/activity_pay_lv_item_money_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_marginTop="@dimen/y20"
-                android:textSize="@dimen/small_text_size"
-                android:text="付费40元"/>
+                    <TextView
+                        android:id="@+id/activity_pay_lv_item_money_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:layout_marginTop="@dimen/y20"
+                        android:textSize="@dimen/small_text_size"
+                        android:text="付费40元"/>
 
-        </LinearLayout>
+                </LinearLayout>
 
-        <TextView
-            android:id="@+id/activity_pay_lv_item_remain_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="剩1"
-            android:layout_marginTop="@dimen/y10"
-            android:layout_marginLeft="@dimen/x10"
-            android:textSize="@dimen/small_text_size_2"
-            android:textColor="@color/white"
+                <TextView
+                    android:id="@+id/activity_pay_lv_item_remain_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="剩1"
+                    android:layout_marginTop="@dimen/y10"
+                    android:layout_marginLeft="@dimen/x10"
+                    android:textSize="@dimen/small_text_size_2"
+                    android:textColor="@color/white"
 
-            />
+                    />
 
-    </RelativeLayout>
+            </RelativeLayout>
+        </RelativeLayout>
+
 </LinearLayout>
