--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -33,6 +33,8 @@
     <color name="text_gray_2">#999996</color>
     <color name="text_gray_3">#898989</color>
     <color name="text_gary_4">#A6A6A6</color>
+    <color name="text_gray_5">#808080</color>
 
     <color name="bg_gray_1">#EFEFEF</color>
+    <color name="bg_gray_2">#F5F5F5</color>
 </resources>
