--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -34,6 +34,10 @@
     <color name="text_gray_3">#898989</color>
     <color name="text_gary_4">#A6A6A6</color>
     <color name="text_gray_5">#808080</color>
+    <color name="text_gray_design_1">#3C3C3C</color>
+    <color name="text_gray_design_2">#AAAAAA</color>
+
+    <color name="divider_color">#E6E6E6</color>
 
     <color name="bg_gray_1">#EFEFEF</color>
     <color name="bg_gray_2">#F5F5F5</color>
