增加抢红包结果对话框

--- a/dishmap/src/main/res/layout/dialog_get_discount.xml
+++ b/dishmap/src/main/res/layout/dialog_get_discount.xml
@@ -25,6 +25,7 @@
         android:layout_marginLeft="@dimen/x18"
         android:textColor="@color/black"
         android:hint="请输入手机号"
+        android:textColorHint="@color/text_hint_gray"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:layout_marginTop="@dimen/y47"
@@ -46,6 +47,7 @@
             android:layout_marginLeft="@dimen/x18"
             android:textColor="@color/black"
             android:hint="输入验证码"
+            android:textColorHint="@color/text_hint_gray"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:textSize="@dimen/big_text_size"
