--- a/dishmap/src/main/res/layout/fragment_user_mine.xml
+++ b/dishmap/src/main/res/layout/fragment_user_mine.xml
@@ -126,6 +126,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/fragment_user_mine_feedback_rel"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y111">
 
@@ -159,6 +160,7 @@
             android:layout_height="1px"
             android:background="@color/line_gray"/>
         <RelativeLayout
+            android:id="@+id/fragment_user_mine_logout_rel"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y111">
 
