修改聊天页面ui为新的ui

--- a/dishmap/src/main/res/drawable/red_bg_radius_5_2.xml
+++ b/dishmap/src/main/res/drawable/red_bg_radius_5_2.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <!-- 边框填充的颜色 -->
-    <solid android:color="#7EDCAB" />
+    <solid android:color="#BB1E28" />
 
     <!-- 设置进度条的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
