--- a/dishmap/src/main/res/drawable/gray_bg_radius_5.xml
+++ b/dishmap/src/main/res/drawable/gray_bg_radius_5.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <!-- 边框填充的颜色 -->
-    <solid android:color="#F6F6F6" />
+    <solid android:color="@color/white" />
 
     <!-- 设置进度条的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
