修改消息页面

--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -43,4 +43,5 @@
     <color name="bg_gray_2">#F5F5F5</color>
     <color name="bg_gray_3">#25292c</color>
 
+    <color name="line_gray_1">#E5E5E5</color>
 </resources>
