--- a/dishmap/src/main/res/layout/activity_message.xml
+++ b/dishmap/src/main/res/layout/activity_message.xml
@@ -10,6 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y128"></include>
 
+    <ListView
+        android:id="@+id/activity_message_lv"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+    </ListView>
 
 </LinearLayout>
